--- a/FeastMobile/MainPage.xaml
+++ b/FeastMobile/MainPage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FeastMobile.MainPage">
+             x:Class="FeastMobile.MainPage"
+             Shell.NavBarIsVisible="False">
+    
     <ScrollView>
         <VerticalStackLayout
             VerticalOptions="Center"
@@ -110,19 +112,19 @@
                 </StackLayout>
             </StackLayout>
 
-            <HorizontalStackLayout 
+            <HorizontalStackLayout
                 HorizontalOptions="Center">
-                
                 <Button 
-                    Text="Позже" Margin="0,0,20,0" BackgroundColor="#D91E78F0" FontSize="16">
-                    
+                    Text="Позже" BackgroundColor="#D91E78F0" FontSize="16" HorizontalOptions="Start" Margin="0,0,25,0">
                 </Button>
-                
                 <Button 
-                    Text="Зарегистрироваться" Margin="20,0,0,0" BackgroundColor="#1E78F0" FontSize="16">
-
+                    Text="Зарегистрироваться" BackgroundColor="#1E78F0" FontSize="16" HorizontalOptions="End" Margin="25,0,0,0">
                 </Button>
             </HorizontalStackLayout>
+
+            <Button Text="У меня уже есть аккаунт" BackgroundColor="#FFFFFF" TextColor="#1E78F0">
+                
+            </Button>
             
         </VerticalStackLayout>
     </ScrollView>
