--- a/FeastMobile/View/EventListPage.xaml
+++ b/FeastMobile/View/EventListPage.xaml
@@ -125,6 +125,8 @@
                                     </HorizontalStackLayout>
                                     <Button 
                                     Text="Добавить в список" 
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:EventViewModel}}, Path=GoToRouteSelectionCommand}"
+                                    CommandParameter="{Binding .}"
                                     BackgroundColor="{StaticResource MainAccent}" 
                                     ImageSource="check.svg"
                                     Margin="5" 
